--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext {
-        buildToolsVersion = "28.0.3"
-        minSdkVersion = 16
-        compileSdkVersion = 28
-        targetSdkVersion = 28
-        supportLibVersion = "28.0.0"
-    }
     repositories {
         google()
         jcenter()
@@ -19,6 +12,8 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+
+apply plugin: 'com.android.library'
 
 allprojects {
     repositories {
@@ -35,4 +30,22 @@ allprojects {
         google()
         jcenter()
     }
+}
+
+android {
+  compileSdkVersion 28
+  buildToolsVersion "28.0.3"
+
+  defaultConfig {
+    minSdkVersion 16
+    targetSdkVersion 28
+  }
+  lintOptions{
+    abortOnError false
+  }
+}
+
+dependencies {
+  //noinspection GradleDynamicVersion
+  api 'com.facebook.react:react-native:+'
 }
